// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders with custom props 1`] = `
<div
  className="ax-slider ax-slider--medium"
  onBlur={[Function]}
  onChange={[MockFunction]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  step={0.1}
  tabIndex="0"
>
  <div
    className="ax-slider__track"
    onMouseDown={[Function]}
  >
    <div
      className="ax-slider__fill"
      style={
        Object {
          "width": "32.5%",
        }
      }
    />
  </div>
  <div
    className="ax-slider__thumb"
    onMouseDown={[Function]}
    style={
      Object {
        "left": "32.5%",
      }
    }
  />
</div>
`;

exports[`Slider renders with defaultProps 1`] = `
<div
  className="ax-slider ax-slider--small"
  onBlur={[Function]}
  onChange={[MockFunction]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  step={1}
  tabIndex="0"
>
  <div
    className="ax-slider__track"
    onMouseDown={[Function]}
  >
    <div
      className="ax-slider__fill"
      style={
        Object {
          "width": "32.5%",
        }
      }
    />
  </div>
  <div
    className="ax-slider__thumb"
    onMouseDown={[Function]}
    style={
      Object {
        "left": "32.5%",
      }
    }
  />
</div>
`;
